tests/pass/FloatLiteral.java
package pass;

public class FloatLiteral {
  public boolean isfloat(int x, int y) {
    return true; // return x * 1.0;
  }
}
