tests/fail/MultilineComment.java
package fail;

import java.lang.System;

public class MultilineComment {

  public static void main(String[] args ) {
    /*
  }
  */
}
